--- a/resume/src/index.html
+++ b/resume/src/index.html
@@ -101,7 +101,7 @@
                     <div class="section-bd">
                         <ul class="section-list">
                             <li><p class="section-content"><i class="iconfont icon-dot"></i>
-                                1年<strong>Android</strong>开发相关工作经验，1年在校实践开发经历
+                                1年<strong>Android</strong>开发相关工作经验，2年在校实践开发经历
                             </p></li>
                             <li><p class="section-content"><i class="iconfont icon-dot"></i>
                                 熟悉Git版本控制及工作流，基线（分支）管理模式，常用命令等
@@ -110,7 +110,7 @@
                                 熟悉面向对象设计思想及Java基础，对部分内容如ArrayList、HashMap进行过源码阅读
                             </p></li>
                             <li><p class="section-content"><i class="iconfont icon-dot"></i>
-                                熟悉Android应用开发，四大组件，AIDL进程通信，View的事件体系及工作原理，SQLite/SQLcipher数据库相关操作，SELinux权限控制等
+                                熟悉Android应用开发，四大组件，AIDL进程通信，View的事件体系及工作原理，SQLite/SQLcipher数据库相关操作，SELinux权限控制、常见设计模式等
                             </p></li>
                             <li><p class="section-content"><i class="iconfont icon-dot"></i>
                                 熟悉Android系统启动流程，应用启动流程，稳定性JE、NE、KE、ANR、SWT五类异常处理机制及日志解析
@@ -160,7 +160,7 @@
                         <div class="item">
                             <header class="item-hd">
                                 <span class="item-time">2018.03 - 至今</span>
-                                <a class="btn item-more" href="https://we.cqu.pt" target="_blank">系统应用</a>
+                                <a class="btn item-more" href="###" target="_blank">系统应用</a>
                                 <h3 class="item-name">LogSystem · 项目重构</h3>
                             </header>
                             <div class="item-bd">
@@ -176,30 +176,26 @@
                         <div class="item">
                             <header class="item-hd">
                                 <span class="item-time">2018.04</span>
-                                <a class="btn item-more" href="http://apps.congm.in/blues" target="_blank">APP</a>
+                                <a class="btn item-more" href="###" target="_blank">APP</a>
                                 <h3 class="item-name">亲情协助 · 界面优化</h3>
                             </header>
                             <div class="item-bd">
                                 <p class="section-content">
-                                    <strong>界面优化</strong><strong>功能梳理</strong>
-                                    <!--
-                                    利用<em>HTML5</em>、<em>CSS3</em>、<em>Sass</em>、<em>Compass</em>、<em>雪碧图</em>等各种技术来丰富展示<em>响应式</em>单页，以<em>Handlebars</em>作为模板引擎处理数据逻辑，基于<em>jQuery</em>进行了一些组件开发；搭建并维护了线上<em>Ubuntu</em>系统<em>nginx</em>服务器环境。
-                                    -->
+                                    <strong>界面优化</strong><strong>交互修改</strong>
+                                    优化界面交互，加入手势操作，实现控制界面的部分自定义View控件
                                 </p>
                             </div>
                         </div>
                         <div class="item">
                             <header class="item-hd">
                                 <span class="item-time">2018.1</span>
-                                <a class="btn item-more" href="http://apps.congm.in/cqupt-cs" target="_blank">APP</a>
+                                <a class="btn item-more" href="###" target="_blank">APP</a>
                                 <h3 class="item-name">售后支持诊断工具</h3>
                             </header>
                             <div class="item-bd">
                                 <p class="section-content">
                                     <strong>功能设计</strong><strong>数据联调</strong>
-                                    <!--
-                                    基于UI框架<em>Bootstrap</em>深度定制了一套样式，实现多终端<em>响应式布局</em>与良好的兼容性(IE8)，针对用户调研意见进行了一系列改进优化，极大提升用户体验。
-                                    -->
+                                    设计两模块信息交互方式，通过AIDL调用实现进程通信，继而PC端通过端口及adb命令连接手机以<strong>HTTP</strong>协议获取数据。
                                 </p>
                             </div>
                         </div>
