完成简历初稿

--- a/resume/src/index.html
+++ b/resume/src/index.html
@@ -28,7 +28,7 @@
             </section>
             <section class="contact">
                 <ul>
-                    <li><a href="https://zhaidongyan.cn" target="_blank"><span class="contact-link">zhaidongyan.cn</span><i class="iconfont icon-homepage"></i></a></li>
+                    <li><a href="http://zhaidongyan.cn" target="_blank"><span class="contact-link">zhaidongyan.cn</span><i class="iconfont icon-homepage"></i></a></li>
                     <li><a href="https://github.com/rockzhai" target="_blank"><span class="contact-link">github.com/rockzhai</span><i class="iconfont icon-github"></i></a></li>
                     <li><a href="mailto:zhaidongyann@gmail.com" target="_blank"><span class="contact-link">zhaidongyann@gmail.com</span><i class="iconfont icon-email"></i></a></li>
                     <li><a href="tel:17560366088" target="_blank"><span class="contact-link">17560366088</span><i class="iconfont icon-phone"></i></a></li>
@@ -47,7 +47,7 @@
                         <div class="item">
                             <header class="item-hd">
                                 <span class="item-time">2017.07 ~ 至今</span>
-                                <a class="btn item-more" href="http://tencent.com" target="_blank">工作</a>
+                                <a class="btn item-more" href="https://www.vivo.com/" target="_blank">工作</a>
                                 <h3 class="item-name">vivo · 维沃移动通信有限公司</h3>
                             </header>
                             <div class="item-bd">
@@ -68,7 +68,7 @@
                             <header class="item-hd">
                                 <span class="item-time">2016.03 ~ 2016.06</span>
                                 <h3 class="item-name">重庆邮电大学 · 信科808实验室</h3>
-                                <a class="btn item-more" href="http://apps.congm.in/blues" target="_blank">学生组织</a>
+                                <a class="btn item-more" href="https://github.com/rockzhai/BLE-Lock" target="_blank">学生组织</a>
                             </header>
                             <div class="item-bd">
                                 <p class="section-content">
@@ -81,7 +81,7 @@
                             <header class="item-hd">
                                 <span class="item-time">2013.11 ~ 2015.06</span>
                                 <h3 class="item-name">重庆邮电大学 · 科联信息部</h3>
-                                <a class="btn item-more" href="http://apps.congm.in/blues" target="_blank">学生组织</a>
+                                <a class="btn item-more" href="http://hongyan.cqupt.edu.cn/kjlhh/article.php?id=558" target="_blank">学生组织</a>
                             </header>
                             <div class="item-bd">
                                 <p class="section-content">
@@ -167,7 +167,7 @@
                                 <p class="section-content">
                                     <strong>方案设计</strong><strong>稳定性模块重构设计开发</strong><strong>多模块业务对接</strong><br>
                                     <strong>重构原则:</strong>可测试性、开闭原则、模块化、低耦合、可复用 <br>
-                                    <strong>方案设计思路:</strong>基础结构分层，系统层上拆分为基础框架层(platform)、核心业务模块层(components)、应用层(application)<br>
+                                    <strong>设计思路:</strong>基础结构分层，系统层上拆分为基础框架层(platform)、核心业务模块层(components)、应用层(application)<br>
                                     <strong>思想借鉴:</strong>借鉴MVP设计模式思想，通过面向接口编程实现模块间低耦合，借鉴Handler原理，用消息通知实现模块间信息交流，包含消息的注册、发送及接收。<br>
                                     <strong>可测试性：</strong>提供可以快速测试脚本及自动化测试方案，例如日志解析自动化解析工具，异常制造工具等
                                 </p>
@@ -215,7 +215,8 @@
                             </header>
                             <div class="item-bd">
                                 <p class="section-content">
-                                    <strong>MVP</strong> <strong>RxJava</strong> <strong>Retrofit</strong> <strong>Glide</strong>
+                                    <strong>MVP</strong> <strong>RxJava</strong> <strong>Retrofit</strong> <strong>Glide</strong><br>
+                                    <strong>MVP+RxJava+Retrofit</strong> 搭建整体框架，<strong>Retrofit+OkHttp</strong> 实现缓存机制，<strong>Jsoup</strong> 对网页进行解析，<strong>SqlLite</strong>实现文章收藏，使用<strong>RecycleView</strong>灵活加载布局。
                                 </p>
                             </div>
                         </div>
@@ -232,17 +233,40 @@
                         <!--</div>-->
                         <div class="item">
                             <header class="item-hd">
-                                <a class="btn item-more" href="https://cqupt.congm.in" target="_blank">Link</a>
-                                <h3 class="item-name"><i class="iconfont icon-dot"></i> 算法 </h3>
+                                <a class="btn item-more" href="http://zhaidongyan.cn/alpha-beta-AIWuziqi/" target="_blank">Link</a>
+                                <h3 class="item-name"><i class="iconfont icon-dot"></i> 算法 · Alpha-Beta剪枝极大极小博弈算法 </h3>
                             </header>
                             <div class="item-bd">
                                 <p class="section-content">
+                                    实践练习：棋类游戏 AI 算法实践
                                     <!--
                                    该系统利用<em>nginx</em>服务器<em>反向代理</em>的原理，极大的方便了同学们的日常使用，随时随地能够查询自己的个人课表、考试安排、期末成绩，进行选课等。 系统上线<em>最近一年</em>，<strong>PV总访问量</strong>已超过<em>360万多次</em>，<strong>PV日均访问</strong>约<em>1万次</em>，<strong>PV单日峰值</strong>接近<em>10万次</em>，<strong>UV日均访客</strong>约<em>2200人</em>，<strong>UV单日峰值</strong>超<em>2万人</em>。
                                     -->
                                </p>
-                           </div>
+                            </div>
                        </div>
+                        <div class="item">
+                            <header class="item-hd">
+                                <h3 class="item-name"><i class="iconfont icon-dot"></i> 技术文章</h3>
+                            </header>
+                            <div class="item-hd">
+                                    <a class="btn item-more" href="http://zhaidongyan.cn/android_system-start_and_app-start/" target="_blank">Link</a>
+                                    Android 系统及应用启动流程
+                                </p>
+                            </div>
+                            <div class="item-hd">
+                                <a class="btn item-more" href="http://zhaidongyan.cn/android_stability/" target="_blank">Link</a>
+                                Android 系统稳定性问题相关梳理
+                                </p>
+                            </div>
+                            <div class="item-hd">
+                                <a class="btn item-more" href="http://zhaidongyan.cn/android_view/" target="_blank">Link</a>
+                                View 的事件体系及工作原理
+                                </p>
+                            </div>
+
+                        </div>
+
                    </div>
                </section>
            </div>
