--- a/resume/src/index.html
+++ b/resume/src/index.html
@@ -53,7 +53,7 @@
                             <div class="item-bd">
                                 <p class="section-content">
                                     <strong>Android 开发方向</strong>
-                                    负责<strong> LogSystem </strong> 模块项目重构方案设计及程序开发<br>
+                                    负责<strong> LogSystem </strong> 模块部分重构方案设计及程序开发<br>
                                     <strong>软件稳定性方向</strong>
                                     负责<strong>云诊断</strong>项目 Android 端开发功能迭代，优化各模块接入流程，分析稳定性问题<br>
                                     <strong>Android 开发方向</strong>
@@ -168,7 +168,7 @@
                                     <strong>方案设计</strong><strong>稳定性模块重构设计开发</strong><strong>多模块业务对接</strong><br>
                                     <strong>重构原则:</strong>可测试性、开闭原则、模块化、低耦合、可复用 <br>
                                     <strong>设计思路:</strong>基础结构分层，系统层上拆分为基础框架层(platform)、核心业务模块层(components)、应用层(application)<br>
-                                    <strong>思想借鉴:</strong>借鉴MVP设计模式思想，通过面向接口编程实现模块间低耦合，借鉴Handler原理，用消息通知实现模块间信息交流，包含消息的注册、发送及接收。<br>
+                                    <strong>思想借鉴:</strong>通过面向接口编程实现模块间低耦合，用消息通知实现模块间信息交流，包含消息的注册、发送及接收。<br>
                                     <strong>可测试性：</strong>提供可以快速测试脚本及自动化测试方案，例如日志解析自动化解析工具，异常制造工具等
                                 </p>
                             </div>
