--- a/resume/src/index.html
+++ b/resume/src/index.html
@@ -30,7 +30,7 @@
                 <ul>
                     <li><a href="http://zhaidongyan.cn" target="_blank"><span class="contact-link">zhaidongyan.cn</span><i class="iconfont icon-homepage"></i></a></li>
                     <li><a href="https://github.com/rockzhai" target="_blank"><span class="contact-link">github.com/rockzhai</span><i class="iconfont icon-github"></i></a></li>
-                    <li><a href="mailto:zhaidongyann@gmail.com" target="_blank"><span class="contact-link">zhaidongyann@gmail.com</span><i class="iconfont icon-email"></i></a></li>
+                    <li><a href="mailto:zhaidongyann@gmail.com" target="_blank"><span class="contact-link">zhai.dongyan@foxmail.com</span><i class="iconfont icon-email"></i></a></li>
                     <li><a href="tel:17560366088" target="_blank"><span class="contact-link">17560366088</span><i class="iconfont icon-phone"></i></a></li>
                 </ul>
             </section>
@@ -67,7 +67,7 @@
                         <div class="item">
                             <header class="item-hd">
                                 <span class="item-time">2016.03 ~ 2016.06</span>
-                                <h3 class="item-name">重庆邮电大学 · 信科808实验室</h3>
+                                <h3 class="item-name">重庆邮电大学 · 信科808</h3>
                                 <a class="btn item-more" href="https://github.com/rockzhai/BLE-Lock" target="_blank">学生组织</a>
                             </header>
                             <div class="item-bd">
@@ -104,16 +104,17 @@
                                 1年<strong>Android</strong>开发相关工作经验，2年在校实践开发经历
                             </p></li>
                             <li><p class="section-content"><i class="iconfont icon-dot"></i>
-                                熟悉Git版本控制及工作流，基线（分支）管理模式，常用命令等
+                                熟悉Git版本控制及工作流，基线（分支）管理模式，git rebase, stash, cherry-pick, squash
+                                merge, 代码回退等
                             </p></li>
                             <li><p class="section-content"><i class="iconfont icon-dot"></i>
-                                熟悉面向对象设计思想及Java基础，对部分内容如ArrayList、HashMap进行过源码阅读
+                                熟悉面向对象设计思想及Java基础，熟悉模块化和组件化的设计思想
                             </p></li>
                             <li><p class="section-content"><i class="iconfont icon-dot"></i>
-                                熟悉Android应用开发，四大组件，AIDL进程通信，View的事件体系及工作原理，SQLite/SQLcipher数据库相关操作，SELinux权限控制、常见设计模式等
+                                熟悉Android应用开发，四大组件，跨进程通信，View的绘制过程及事件分发机制，SELinux权限控制、常见设计模式等
                             </p></li>
                             <li><p class="section-content"><i class="iconfont icon-dot"></i>
-                                熟悉Android系统启动流程，应用启动流程，稳定性JE、NE、KE、ANR、SWT五类异常处理机制及日志解析
+                                熟悉Android系统启动流程，应用启动流程，稳定性异常处理机制及日志解析
                             </p></li>
                         </ul>
                     </div>
@@ -166,10 +167,10 @@
                             <div class="item-bd">
                                 <p class="section-content">
                                     <strong>方案设计</strong><strong>稳定性模块重构设计开发</strong><strong>多模块业务对接</strong><br>
-                                    <strong>重构原则:</strong>可测试性、开闭原则、模块化、低耦合、可复用 <br>
-                                    <strong>设计思路:</strong>基础结构分层，系统层上拆分为基础框架层(platform)、核心业务模块层(components)、应用层(application)<br>
+                                    <strong>重构目的:</strong>提升稳定性、可测试性，多模块间业务解耦 <br>
+                                    <strong>设计思路:</strong>基础结构分层，拆分为基础框架层(platform)、核心业务模块层(components)、应用层(application)<br>
                                     <strong>思想借鉴:</strong>通过面向接口编程实现模块间低耦合，用消息通知实现模块间信息交流，包含消息的注册、发送及接收。<br>
-                                    <strong>可测试性：</strong>提供可以快速测试脚本及自动化测试方案，例如日志解析自动化解析工具，异常制造工具等
+                                    <strong>可测试性：</strong>快速测试脚本及自动化测试方案：日志解析自动化解析工具，异常制造工具等
                                 </p>
                             </div>
                         </div>
@@ -182,7 +183,7 @@
                             <div class="item-bd">
                                 <p class="section-content">
                                     <strong>界面优化</strong><strong>交互修改</strong>
-                                    优化界面交互，加入手势操作，实现控制界面的部分自定义View控件
+                                    手机相互控制应用，优化界面交互，加入手势操作，实现控制界面的部分自定义View控件
                                 </p>
                             </div>
                         </div>
